--- a/importExcelTest/app.config
+++ b/importExcelTest/app.config
@@ -45,7 +45,7 @@
                 <value>Data Source=192.168.110.100;Initial Catalog=Mali;Persist Security Info=True;User ID=Xenups;Password=Xenups1368;Connect Timeout=5</value>
             </setting>
             <setting name="dgvColor" serializeAs="String">
-                <value>192, 255, 192</value>
+                <value>DarkSeaGreen</value>
             </setting>
             <setting name="permission" serializeAs="String">
                 <value>False</value>
