some features added

--- a/importExcelTest/negar.csproj
+++ b/importExcelTest/negar.csproj
@@ -11,7 +11,7 @@
     <TargetFrameworkVersion>v3.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <IsWebBootstrapper>true</IsWebBootstrapper>
-    <PublishUrl>C:\Users\PML\Desktop\update\</PublishUrl>
+    <PublishUrl>ftp://2593428228%4010.120.0.8:1985/public/لسانی/update/negar/</PublishUrl>
     <Install>true</Install>
     <InstallFrom>Web</InstallFrom>
     <UpdateEnabled>true</UpdateEnabled>
