--- a/importExcelTest/negar.csproj
+++ b/importExcelTest/negar.csproj
@@ -272,6 +272,11 @@
     <Compile Include="PersianCultureHelper.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Properties\Resources.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>Resources.resx</DependentUpon>
+    </Compile>
     <Compile Include="Report.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -398,14 +403,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
-      <LastGenOutput>Resources.Designer.cs</LastGenOutput>
       <SubType>Designer</SubType>
+      <LastGenOutput>Resources.Designer.cs</LastGenOutput>
     </EmbeddedResource>
-    <Compile Include="Properties\Resources.Designer.cs">
-      <AutoGen>True</AutoGen>
-      <DependentUpon>Resources.resx</DependentUpon>
-      <DesignTime>True</DesignTime>
-    </Compile>
     <None Include="DaftarModel.dbml">
       <Generator>MSLinqToSQLGenerator</Generator>
       <LastGenOutput>DaftarModel.designer.cs</LastGenOutput>
@@ -455,9 +455,6 @@
     <None Include="Resources\20000000.png" />
     <None Include="Resources\10000001.png" />
     <None Include="Resources\10000000.png" />
-    <None Include="Resources\wooman00.png" />
-    <None Include="Resources\wine0000.png" />
-    <None Include="Resources\twit-128.png" />
     <None Include="Resources\target00.png" />
     <None Include="Resources\speakers.png" />
     <None Include="Resources\shopping.png" />
@@ -477,7 +474,6 @@
     <None Include="Resources\heart-12.png" />
     <None Include="Resources\graph000.png" />
     <None Include="Resources\football.png" />
-    <None Include="Resources\diamond0.png" />
     <None Include="Resources\clock000.png" />
     <None Include="Resources\bubbles0.png" />
     <None Include="Resources\browser0.png" />
@@ -507,31 +503,13 @@
   <ItemGroup>
     <Content Include="Designbolts-Free-Multimedia-IMac.ico" />
     <Content Include="if_Prism-3_379418.ico" />
-    <None Include="Resources\stp1.gif" />
-    <None Include="Resources\stp.gif" />
+    <None Include="Resources\search_icon_animation.gif" />
     <None Include="Resources\note1.png" />
     <None Include="Resources\Edit %281%291.png" />
     <None Include="Resources\How-to-manage-access-to-permission.png" />
     <None Include="Resources\Edit %281%29.png" />
     <None Include="Resources\copy-16.png" />
-    <None Include="Resources\21321.png" />
-    <None Include="Resources\dd674f89d713bb2645a32925102199981.gif" />
-    <None Include="Resources\bobotov_loader_0021.gif" />
-    <None Include="Resources\loadinganimation.gif" />
-    <None Include="Resources\giphy %281%29.gif" />
-    <None Include="Resources\dd674f89d713bb2645a3292510219998.gif" />
-    <None Include="Resources\bobotov_loader_002.gif" />
-    <None Include="Resources\5a6d3b149457f90001e4b924_gilgamesh.jpg" />
-    <None Include="Resources\d6046650703785.58d789fda431f.gif" />
-    <None Include="Resources\giphy.gif" />
-    <None Include="Resources\04de2e31234507.564a1d23645bf.gif" />
-    <None Include="Resources\35771931234507.564a1d2403b3a.gif" />
-    <None Include="Resources\585d0331234507.564a1d239ac5e.gif" />
     <None Include="Resources\ab79a231234507.564a1d23814ef.gif" />
-    <None Include="Resources\dae67631234507.564a1d230a290.gif" />
-    <None Include="Resources\loading-animations-preloader-gifs-ui-ux-effects-28.gif" />
-    <None Include="Resources\f1055231234507.564a1d234bfb6.gif" />
-    <None Include="Resources\0a133a80ebd04a65b1afc8d1d76997f1.png" />
     <None Include="Resources\user.png" />
     <None Include="Resources\if_sign-error_299045.png" />
     <None Include="Resources\if_sign-check_299110.png" />
