-added some features

--- a/importExcelTest/app.config
+++ b/importExcelTest/app.config
@@ -1,22 +1,16 @@
-﻿<?xml version="1.0" encoding="utf-8" ?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
     <configSections>
-        <sectionGroup name="userSettings" type="System.Configuration.UserSettingsGroup, System, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" >
+        <sectionGroup name="userSettings" type="System.Configuration.UserSettingsGroup, System, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
             <section name="negar.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false" />
             <section name="importExcelTest.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false" />
         </sectionGroup>
     </configSections>
     <connectionStrings>
-        <add name="importExcelTest.Properties.Settings.MaliConnectionString1"
-            connectionString="Data Source=192.168.1.38;Initial Catalog=Mali;Persist Security Info=True;User ID=Xenups"
-            providerName="System.Data.SqlClient" />
-        <add name="importExcelTest.Properties.Settings.MaliConnectionString"
-            connectionString="Data Source=PML-PC;Initial Catalog=Mali;Persist Security Info=True;User ID=Xenups;Password=Xenups1368"
-            providerName="System.Data.SqlClient" />
-        <add name="negar.Properties.Settings.MaliConnectionString1" connectionString="Data Source=192.168.1.38;Initial Catalog=Mali;Persist Security Info=True;User ID=Xenups"
-            providerName="System.Data.SqlClient" />
-        <add name="negar.Properties.Settings.MaliConnectionString" connectionString="Data Source=PML-PC;Initial Catalog=Mali;Persist Security Info=True;User ID=Xenups;Password=Xenups1368"
-            providerName="System.Data.SqlClient" />
+        <add name="importExcelTest.Properties.Settings.MaliConnectionString1" connectionString="Data Source=192.168.1.38;Initial Catalog=Mali;Persist Security Info=True;User ID=Xenups" providerName="System.Data.SqlClient" />
+        <add name="importExcelTest.Properties.Settings.MaliConnectionString" connectionString="Data Source=PML-PC;Initial Catalog=Mali;Persist Security Info=True;User ID=Xenups;Password=Xenups1368" providerName="System.Data.SqlClient" />
+        <add name="negar.Properties.Settings.MaliConnectionString1" connectionString="Data Source=192.168.1.38;Initial Catalog=Mali;Persist Security Info=True;User ID=Xenups" providerName="System.Data.SqlClient" />
+        <add name="negar.Properties.Settings.MaliConnectionString" connectionString="Data Source=PML-PC;Initial Catalog=Mali;Persist Security Info=True;User ID=Xenups;Password=Xenups1368" providerName="System.Data.SqlClient" />
     </connectionStrings>
     <userSettings>
         <negar.Properties.Settings>
@@ -90,4 +84,12 @@
             </setting>
         </importExcelTest.Properties.Settings>
     </userSettings>
+  <runtime>
+    <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
+      <dependentAssembly>
+        <assemblyIdentity name="itextsharp" publicKeyToken="8354ae6d2174ddca" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-5.5.13.0" newVersion="5.5.13.0" />
+      </dependentAssembly>
+    </assemblyBinding>
+  </runtime>
 </configuration>
