--- a/importExcelTest/packages.config
+++ b/importExcelTest/packages.config
@@ -2,8 +2,10 @@
 <packages>
   <package id="BehComponent" version="1.0.0" targetFramework="net35" />
   <package id="DocumentFormat.OpenXml" version="2.8.1" targetFramework="net35" />
+  <package id="DoddleReport" version="1.4" targetFramework="net35" />
+  <package id="DoddleReport.iTextSharp" version="1.4" targetFramework="net35" />
+  <package id="iTextSharp" version="5.1.1" targetFramework="net35" />
   <package id="LinqToExcel" version="1.11.0" targetFramework="net35" />
-  <package id="log4net" version="1.2.10" targetFramework="net35" />
   <package id="PersianDate" version="3.5.5" targetFramework="net35" />
   <package id="TaskParallelLibrary" version="1.0.2856.0" targetFramework="net35" />
 </packages>
