--- a/importExcelTest/app.config
+++ b/importExcelTest/app.config
@@ -7,10 +7,18 @@
         </sectionGroup>
     </configSections>
     <connectionStrings>
-        <add name="importExcelTest.Properties.Settings.MaliConnectionString1" connectionString="Data Source=192.168.1.38;Initial Catalog=Mali;Persist Security Info=True;User ID=Xenups" providerName="System.Data.SqlClient" />
-        <add name="importExcelTest.Properties.Settings.MaliConnectionString" connectionString="Data Source=PML-PC;Initial Catalog=Mali;Persist Security Info=True;User ID=Xenups;Password=Xenups1368" providerName="System.Data.SqlClient" />
-        <add name="negar.Properties.Settings.MaliConnectionString1" connectionString="Data Source=192.168.1.38;Initial Catalog=Mali;Persist Security Info=True;User ID=Xenups" providerName="System.Data.SqlClient" />
-        <add name="negar.Properties.Settings.MaliConnectionString" connectionString="Data Source=PML-PC;Initial Catalog=Mali;Persist Security Info=True;User ID=Xenups;Password=Xenups1368" providerName="System.Data.SqlClient" />
+        <add name="importExcelTest.Properties.Settings.MaliConnectionString1"
+            connectionString="Data Source=192.168.1.38;Initial Catalog=Mali;Persist Security Info=True;User ID=Xenups"
+            providerName="System.Data.SqlClient" />
+        <add name="importExcelTest.Properties.Settings.MaliConnectionString"
+            connectionString="Data Source=PML-PC;Initial Catalog=Mali;Persist Security Info=True;User ID=Xenups;Password=Xenups1368"
+            providerName="System.Data.SqlClient" />
+        <add name="negar.Properties.Settings.MaliConnectionString1" connectionString="Data Source=192.168.1.38;Initial Catalog=Mali;Persist Security Info=True;User ID=Xenups"
+            providerName="System.Data.SqlClient" />
+        <add name="negar.Properties.Settings.MaliConnectionString" connectionString="Data Source=PML-PC;Initial Catalog=Mali;Persist Security Info=True;User ID=Xenups;Password=Xenups1368"
+            providerName="System.Data.SqlClient" />
+        <add name="negar.Properties.Settings.MaliConnectionString2" connectionString="Data Source=10.120.0.50;Initial Catalog=Mali;User ID=Xenups;Password=Xenups1368128"
+            providerName="System.Data.SqlClient" />
     </connectionStrings>
     <userSettings>
         <negar.Properties.Settings>
